force-app/main/default/objects/Book__c/Book__c.object-meta.xml
<CustomObject>
    <label>Book</label>
    <nameField>
        <displayFormat>BC-{00000}</displayFormat>
        <label>Book Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Books</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>