force-app/main/default/objects/Book__c/fields/Books_less_than_10__c.field-meta.xml
<CustomField>
    <fullName>Books_less_than_10__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Books less than 10</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Price__c</field>
            <operation>lessThan</operation>
            <value>20</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Book__c</referenceTo>
    <relationshipLabel>Books</relationshipLabel>
    <relationshipName>Books</relationshipName>
    <type>Lookup</type>
</CustomField>