force-app/main/default/objects/Book__c/fields/Subject_Name__c.field-meta.xml
<CustomField>
    <fullName>Subject_Name__c</fullName>
    <label>Subject Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Artificial Intelligence</fullName>
            </value>
            <value>
                <fullName>Big Data</fullName>
            </value>
            <value>
                <fullName>Cloud Computing</fullName>
            </value>
            <value>
                <fullName>Mobile Programming</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>